# financing-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  multi-build.sh  run.sh  rust-toolchain.toml
data/: financing-service.toml
docs/: Configuration.md  Development.md  LockingScripts.md  Project.md  Releases  SupportedEndpoints.md
docs/diagrams/: datastructures.puml  get-balance.puml  get-status.puml  overview.puml  overview2.puml  request-funds.puml  top-up-balance.puml  transactions.puml  use-case.puml
src/: blockchain_factory.rs  blockchain_interface.rs  client.rs  config.rs  dynamic_config.rs  main.rs  rest_api.rs  service.rs  util.rs
src/blockchain_interface/: blockchain_factory.rs  blockchain_if.rs  blockchain_interface_test.rs  blockchain_interface_woc.rs  mod.rs
