[package]
name = "financing-service-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features =["derive"] }
toml = "0.5.8"
serde_json = "1.0"
bitcoin = "0.29.1"
sv = "0.2.2"
reqwest = { version = "0.11.12", features = ["json"]}
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
hex = "0.4.3"
async-mutex = "1.4.0"
