[package]
name = "financing-service-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features =["derive"] }
toml = "0.5.8"
serde_json = "1.0"
bitcoin = "0.29.1"
reqwest = { version = "0.11.12", features = ["json"]}
tokio = { version = ">=1.18.4, <1.19.0", features = ["full"] }
chrono = "0.4"
hex = "0.4.3"
async-mutex = "1.4.0"
async-trait = "0.1.58"
http = "0.1.21"
chain-gang = { path = "../chain-gang", features = ["interface"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
simple_logger = "4.0.0"
