[package]
name = "financing-service-rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features =["derive"] }
toml = "0.5.8"
serde_json = "1.0.114"
bitcoin = "0.29.1"
reqwest = { version = "0.11.25", features = ["json"]}
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.35"
hex = "0.4.3"
async-mutex = "1.4.0"
async-trait = "0.1.77"
http = "1.1.0"
chain-gang = { path = "../chain-gang", features = ["interface"] }
log = { version = "0.4.21", features = ["max_level_trace", "release_max_level_warn"] }
simple_logger = "4.3.3"
